workload/apps/temporal/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: temporal
  labels:
    app.kubernetes.io/name: temporal
